--- a/style.css
+++ b/style.css
@@ -1,5 +1,35 @@
-#image{
- position: fixed; 
- left: 10px;
- top: 10px;
+body{
+  /* background-color: red; */
+  width: 100%;
+  height: 100%;
+  margin: 0;
+}
+
+.images{
+  /* background-color: yellow; */
+  /* width: 100%; */
+  height: 100%;
+
+}
+
+.image{
+  position: fixed;
+  
+}
+
+.description{
+  font-family: Arial, Helvetica, sans-serif; 
+  font-size:3vmax;
+  width: 100%;
+  height: 15%;
+  padding:6%;
+  z-index: 9999!important;
+  background-color: rgba(0, 0, 0, 0.8);
+  box-shadow: 10px 10px 50px 40px rgba(0, 0, 0, 0.8);
+  position: fixed;
+  bottom:0;
+  color: white;
+  /* display: none; */
+  transition: top 10s;
+  -webkit-transition: top 10s;
 }
